tests/valid/borrow/mut_borrow.facet
fn f(mut x: unrestricted isize) -> unrestricted &mut unrestricted isize {
    (&mut x)
}
