tests/invalid/borrow_error/unrestricted_mut_ref_return.facet
fn bad(mut x: unrestricted isize) -> unrestricted &mut unrestricted isize {
    (&mut x)
}
